--- a/Perceptron as Logic Operator.ipynb
+++ b/Perceptron as Logic Operator.ipynb
@@ -293,6 +293,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "But how??\n",
+    "\n",
+    "![](1.jpeg)\n",
+    "\n",
+    "\n",
+    "Again how to get dL/dw\n",
+    "\n",
+    "![](3.jpeg)\n",
+    "![](2.jpeg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Training Loop"
    ]
   },
